# cpp_template

./: CMakeLists.txt  CMakePresets.json
cmake_modules/: basic_env.cmake
src/: main.cpp
